<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.shikalenko.htmlunit</groupId>  
    <artifactId>htmlunit-xprmntl-project</artifactId>  
    <version>1.0.0</version>
  </parent>
  <artifactId>htmlunit-xprmntl-srv-test</artifactId>
  <name>Html unit experimental server test</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
    <maven.compiler.source>1.8</maven.compiler.source>  
    <maven.compiler.target>1.8</maven.compiler.target>  
    <tomcat>${project.basedir}/tomcat</tomcat>  
    <xprmntl-webapp-target>${project.basedir}/../web/target</xprmntl-webapp-target>  
    <xprmntl-war-name>xprmntl</xprmntl-war-name>
    <test.url>http://localhost:8080/xprmntl/app/index.html</test.url>
  </properties>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>    
      <artifactId>junit</artifactId>    
      <version>4.11</version>    
      <scope>test</scope>
    </dependency>  
    <dependency>
      <groupId>net.sourceforge.htmlunit</groupId>    
      <artifactId>htmlunit</artifactId>    
      <version>2.49.1</version>    
      <scope>test</scope>
    </dependency>  
    <dependency>
      <groupId>org.apache.tomcat</groupId>    
      <artifactId>tomcat-catalina</artifactId>    
      <version>9.0.43</version>
    </dependency>
  </dependencies>
  <profiles>
    <profile>
      <id>integration</id>    
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>    
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>          
            <artifactId>cargo-maven2-plugin</artifactId>          
            <version>1.8.3</version>          
            <configuration>
              <wait>false</wait>            
              <container>
                <containerId>tomcat9x</containerId>              
                <type>embedded</type>
              </container>            
              <deployables>
                <deployable>
                  <type>war</type>                
                  <location>${xprmntl-webapp-target}/${xprmntl-war-name}.war</location>                
                  <properties>
                    <context>/xprmntl</context>
                  </properties>
                </deployable>
              </deployables>
            </configuration>          
            <executions>
              <execution>
                <id>start-server</id>              
                <phase>pre-integration-test</phase>              
                <goals>
                  <goal>start</goal>
                </goals>
              </execution>            
              <execution>
                <id>stop-server</id>              
                <phase>post-integration-test</phase>              
                <goals>
                  <goal>stop</goal>
                </goals>
              </execution>
            </executions>
          </plugin>        
          <plugin>
            <artifactId>maven-surefire-plugin</artifactId>          
            <version>2.22.1</version>          
            <executions>
              <execution>
                <phase>integration-test</phase>              
                <goals>
                  <goal>test</goal>
                </goals>              
                <configuration>
                  <systemProperties>
                    <test.url>${test.url}</test.url>
                  </systemProperties>
                  <excludes>
                    <exclude>none</exclude>
                  </excludes>                
                  <includes>
                    <include>**/*Test.java</include>
                  </includes>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  <build>
    <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
      
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>      
        <version>3.1.0</version>
      </plugin>                          
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
      
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>      
        <version>3.0.2</version>
      </plugin>                          
      
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>      
        <version>3.8.0</version>
      </plugin>                          
<!-- 
        <plugin>
          <artifactId>maven-antrun-plugin</artifactId>        
          <executions>
            <execution>
              <phase>pre-integration-test</phase>            
              <configuration>
                <target>
                  <copy toDir="${tomcat}/webapps">
                    <fileset dir="${xprmntl-webapp-target}">
                      <include name="*.war"/>
                    </fileset>
                  </copy>
                </target>
              </configuration>            
              <goals>
                <goal>run</goal>
              </goals>
            </execution>
          </executions>
        </plugin>      
-->        
<!--               
              -Djava.util.logging.config.file=${tomcat}/conf/logging.properties
              -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager
              -Dlogger.com.web.util.FilePathResolver=TRACE -Dcheck.kyc=n -Dcheck.bo=n 
              -Daxis2.repo=/usr/local/gehtsoft/fxtr/ushik/Fxtr9p/lib/axis/repository 
              -Daxis2.xml=/usr/local/gehtsoft/fxtr/ushik/Fxtr9p/lib/axis/conf/axis2.xml 
              -Drbs.storage=com.fxcm.web.configuration.RBSettingStorage 
              -Dcom.qizx.docman.cachesize=62914560 
              -Dlog4j.ignoreTCL=true -ea 
              -Duser.language=en 
              -Duser.country=US 
              -Duser.timezone=asia/omsk 
              -Dprint.conditions=y 
              -Dprint.actions=y 
              -XX:MaxPermSize=256m 
              -Xms256m 
              -Xmx1024m 
              -server 
              -Djdk.tls.ephemeralDHKeySize=2048 
              -Djava.protocol.handler.pkgs=org.apache.catalina.webresources 
              -Dorg.apache.catalina.security.SecurityListener.UMASK=0027 
              -agentlib:jdwp=transport=dt_socket,address=0.0.0.0:8014,server=y,suspend=n 
              -Dignore.endorsed.dirs= 
              -classpath 
              /usr/local/gehtsoft/fxtr/ushik/Fxtr9p:/usr/local/gehtsoft/fxtr/ushik/Fxtr9p/bin/bootstrap.jar:/usr/local/gehtsoft/fxtr/ushik/Fxtr9p/bin/tomcat-juli.jar 
              -Dcatalina.base=/usr/local/gehtsoft/fxtr/ushik/Fxtr9p 
              -Dcatalina.home=/usr/local/gehtsoft/fxtr/ushik/Fxtr9p 
              -Djava.io.tmpdir=/usr/local/gehtsoft/fxtr/ushik/Fxtr9p/temp 
              org.apache.catalina.startup.Bootstrap 
              start
 -->
 <!--               
        <plugin>
          <groupId>org.codehaus.mojo</groupId>        
          <artifactId>exec-maven-plugin</artifactId>        
          <version>3.0.0</version>        
          <executions>
            <execution>
              <phase>pre-integration-test</phase>            
              <goals>
                <goal>exec</goal>
              </goals>
            </execution>
          </executions>        
          <configuration>
            <executable>java</executable>          
            <workingDirectory>${tomcat}</workingDirectory>          
            <arguments>
              <argument>-Djava.util.logging.config.file=${tomcat}/conf/logging.properties</argument>
              <argument>-Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager</argument>
              <argument>-Dlogger.com.web.util.FilePathResolver=TRACE</argument>
              <argument>-Dcheck.kyc=n</argument>
              <argument>-Dcheck.bo=n</argument>
              <argument>-Dlog4j.ignoreTCL=true</argument>
              <argument>-ea</argument>
              <argument>-Duser.language=en</argument>
              <argument>-Duser.country=US</argument>
              <argument>-Duser.timezone=asia/omsk</argument>
              <argument>-Dprint.conditions=y</argument>
              <argument>-Dprint.actions=y</argument>
              <argument>-XX:MaxPermSize=256m</argument>
              <argument>-Xms256m</argument>
              <argument>-Xmx1024m</argument>
              <argument>-server</argument>
              <argument>-Djdk.tls.ephemeralDHKeySize=2048</argument>
              <argument>-Djava.protocol.handler.pkgs=org.apache.catalina.webresources</argument>
              <argument>-Dorg.apache.catalina.security.SecurityListener.UMASK=0027</argument>
              <argument>-agentlib:jdwp=transport=dt_socket,address=0.0.0.0:8014,server=y,suspend=n</argument>
              <argument>-Dignore.endorsed.dirs=</argument>
              <argument>-Dcatalina.base=${tomcat}</argument>
              <argument>-Dcatalina.home=${tomcat}</argument>
              <argument>-Djava.io.tmpdir=${tomcat}/temp</argument>
              <argument>-classpath</argument>
              <classpath/>
              <argument>org.apache.catalina.startup.Bootstrap</argument>
              <argument>start</argument>
            </arguments>          
            <environmentVariables>
              <LANG>en_US</LANG>
            </environmentVariables>
          </configuration>
        </plugin>      
 -->
      
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>      
        <version>2.22.1</version>      
        <configuration>
          <excludes>
            <exclude>**/*.java</exclude>
          </excludes>
        </configuration>
      </plugin>                          
      
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>      
        <version>3.0.2</version>
      </plugin>                          
      
      <plugin>
        <artifactId>maven-install-plugin</artifactId>      
        <version>2.5.2</version>
      </plugin>                          
      
      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>      
        <version>2.8.2</version>
      </plugin>                          
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
      <plugin>
        <artifactId>maven-site-plugin</artifactId>      
        <version>3.7.1</version>
      </plugin>    
      <plugin>
        <artifactId>maven-project-info-reports-plugin</artifactId>      
        <version>3.0.0</version>
      </plugin>
    </plugins>
  </build>
</project>
